[gd_scene load_steps=7 format=3 uid="uid://btd3dskutcc5d"]

[ext_resource type="Script" path="res://Enemies/Kangaroo/Kangaroov2Script.gd" id="1_x5ajm"]
[ext_resource type="Texture2D" uid="uid://df3fuo243g2s5" path="res://Assests/Other/FIXED KANGROO.png" id="2_iw7t0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wobue"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iw7t0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxxac"]
size = Vector2(96, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6646d"]
size = Vector2(96, 120)

[sub_resource type="Curve2D" id="Curve2D_32ns3"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 192, -320, 0, 0, 0, 0, 384, 0)
}
point_count = 3

[node name="Kangaroo" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_x5ajm")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(5.72205e-06, 0)
sprite_frames = SubResource("SpriteFrames_wobue")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(8, 1)
shape = SubResource("RectangleShape2D_nxxac")

[node name="Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape" type="CollisionShape2D" parent="Area"]
position = Vector2(8, 1)
shape = SubResource("RectangleShape2D_6646d")

[node name="DamageTakenTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_32ns3")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotation = -1.03038
loop = false

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="timeout" from="DamageTakenTimer" to="." method="_on_damage_taken_timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
